# -*- coding: utf-8 -*-
2008-08-22  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb: Corrected usage of HOMEDRIVE and HOMEPATH on Windows.
	* test/test_gem.rb: Added test to verify.

2008-08-17  Eric Hodel  <drbrain@segment7.net>

	* doc/release_notes/rel_1_3_0.rdoc:  Initial release notes for 1.3.0.
	* util/CL2notes:  Release note creation helper script.

2008-08-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Added #both? to complement
	  #local? and #remote?.
	* lib/rubygems/commands/query_command.rb:  Print out LOCAL/REMOTE with
	--both, even without a TTY.
	* lib/rubygems.rb:  Add Gem.find_files, allows a gem to discover
	features provided by other gems.

2008-08-14  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/source_index.rb: Deprecate options to 'search' other than
	Gem::Dependency instances and issue warning until November 2008.
	* lib/rubygems/platform.rb:	Remove deprecated constant warnings
	and really deprecate them.
	* Rakefile: If the SETUP_OPTIONS environment variable is set, pass its
	contents as arguments to setup.rb
	* test/test_gem_commands_uninstall_command.rb: Added

2008-08-13  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/uninstaller.rb:	Fix binary script uninstallation.
	Bug #21234 by Neil Wilson.
	* test/test_gem_commands_uninstall_command.rb: Added

2008-08-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Try to create directory before diverting
	to ~/.gems.
	* lib/rubygems/uninstaller.rb:  Fix uninstallation with -i.  Bug
	#20812 by John Clayton.  Have #remove_all call #uninstall_gem so hooks
	get called.  Bug #21242 by Neil Wilson.
	* lib/rubygems/commands/update_command.rb:  Fix updating RubyGems when
	no previous rubygems-update is installed.  Bug #20775 by Hemant Kumar.

2008-08-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Fix HTTPS support.  Patch #21072 by